Updated resume, fixed a few spelling errors and bugs.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Developer / Integrations Specialist by day and a Business Analytics grad student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Computer Science and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a> and an <a href="http://bab.sn/mba" target="_blank">MBA</a> from <a href="http://www.babson.edu/news-events/babson-news/Pages/us-news-best-graduate-schools-ranking.aspx" target="_blank">the most entrepreneurial school in the nation</a>. I constantly strive to pair up my technical background with my entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a class="sc" style="cursor:pointer">music</a>, read about FI/RE and investing, and generally try to expand my <a onClick="javascript:document.getElementById('mf').src=((document.getElementById('mf').src.search('8lFwld7')>0)?'https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapit%C3%A1n-jack-captain-jack.jpg':'https://i.imgur.com/8lFwld7.jpg');" style="cursor:pointer;">horizons</a>.</p>
+                            <p>I am Vadim, an Integrations Specialist / Application Developer by day and a Business Analytics grad student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Computer Science and Applied Math from <a href="https://wit.edu" target="_blank">WIT</a> and an <a href="http://bab.sn/mba" target="_blank">MBA</a> from <a href="https://www.babson.edu/news-events/babson-news/Pages/us-news-best-graduate-schools-ranking.aspx" target="_blank">the most entrepreneurial school in the nation</a>. I constantly strive to pair up my technical background with my entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/" target="_blank" id="sc" style="cursor:pointer">write</a> and <a href="https://photos.google.com/share/AF1QipMVQuaVk_K9n_gBnDyvwr8pF6Zk8Y8G9eJrshP0_y0xYf4s6Cp5KYNz90gsaCFSig/photo/AF1QipO0SDhINWcVBPTgsUyy74ZJsm83La9OENlQGRrx?key=WDVEREVGZjVNYzZPUU50d0ZyMllrUTNRNkoxSndR" target="_blank">play</a> music, read about FI/RE and investing, and generally try to expand my <a onClick="javascript:document.getElementById('mf').src=((document.getElementById('mf').src.search('8lFwld7')>0)?'https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapit%C3%A1n-jack-captain-jack.jpg':'https://i.imgur.com/8lFwld7.jpg');" style="cursor:pointer;">horizons</a>.</p>
                         </div>
                     </div>                
                 </section>
@@ -116,7 +116,7 @@
                         <h2 class="heading"><a href="resume.html#edu" target="_blank">Education</a></h2>
                         <div class="content">
                         	<div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc in Business Analytics - in progress</h3>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc in Business Analytics </h3>
                                 <h4 class="university"><a href="http://bab.sn/msba" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=bab.sn" alt="Babson">  Babson College <span class="year">(2018-2019)</span></a></h4>
                             </div>
                             <div class="item">                      
@@ -125,7 +125,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science, 3.82/4</h3>
-                                <h4 class="university"><a href="http://wit.edu/" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=www.wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
+                                <h4 class="university"><a href="https://wit.edu/" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=www.wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc/MSc in Software Development - transferred out</h3>
