--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -2,8 +2,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-        <a-entity text="font: monoid; value:WELCOME TO SPACECHANGERS DEMO; align:center" scale="5 5 5" position="0 1.75 -1.5"></a-entity>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-entity text="font: monoid; value:WELCOME TO SPACECHANGERS DEMO; align:center" scale="2 2 2" position="0 0 0"></a-entity>
+		<a-marker-camera type='pattern' url='assets/spacechangers.patt'></a-marker-camera>
 	</a-scene>
 </body>
