--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -2,7 +2,11 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-assets>
+            <a-asset-item id="wall" src="/assets/brick-wall-white.gltf"></a-asset-item>
+          </a-assets>
+          <!-- use your gltf model -->
+          <a-entity gltf-model="##wall"></a-entity>
+		<a-marker type='pattern' url='/assets/spacechangers.patt'></a-marker>
 	</a-scene>
 </body>
