--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -7,6 +7,6 @@
           </a-assets>
           <!-- use your gltf model -->
           <a-entity gltf-model="##wall"></a-entity>
-		<a-marker-camera type='pattern' url='/assets/spacechangers.patt'></a-marker-camera>
+		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
