--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -3,11 +3,13 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-assets>
-            <a-asset-item id="wall" src="/assets/modern-wall.glb"></a-asset-item>
+            <a-asset-item id="floor" src="assets/modern-floor.glb"></a-asset-item>
           </a-assets>
           <!-- use your gltf model -->
-          <a-entity gltf-model="#wall"></a-entity>
+          <a-entity gltf-model="#floor"></a-entity>
           <!--<a-entity gltf-model="#modelwall"></a-entity>-->
-		<a-marker-camera type='hiro'></a-marker-camera>
+        <a-marker-camera type='hiro'></a-marker-camera>
+        
+		<!--<a-marker-camera type='pattern' url='/assets/spacechangers.patt'></a-marker-camera>-->
 	</a-scene>
 </body>
