--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -3,10 +3,10 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-assets>
-            <a-asset-item id="floor" src="assets/modern-floor.glb"></a-asset-item>
+            <a-asset-item id="model2" src="assets/model2-scaled.glb"></a-asset-item>
           </a-assets>
           <!-- use your gltf model -->
-          <a-entity gltf-model="#floor"></a-entity>
+          <a-entity gltf-model="#model2"></a-entity>
           <!--<a-entity gltf-model="#modelwall"></a-entity>-->
         <a-marker-camera type='hiro'></a-marker-camera>
         
