Trying GLTF model 3.

--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -8,8 +8,8 @@
           <!-- use your gltf model -->
           <a-entity gltf-model="#model2"></a-entity>
           <!--<a-entity gltf-model="#modelwall"></a-entity>-->
-        <a-marker-camera type='hiro'></a-marker-camera>
+        <!--<a-marker-camera type='hiro'></a-marker-camera>-->
         
-		<!--<a-marker-camera type='pattern' url='/assets/spacechangers.patt'></a-marker-camera>-->
+		<a-marker-camera type='pattern' url='assets/marker.patt'></a-marker-camera>
 	</a-scene>
 </body>
