--- a/spacechangers/index.html
+++ b/spacechangers/index.html
@@ -10,10 +10,7 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-assets>
-            <a-asset-item id="wall" src="assets/modern-wall.glb" ></a-asset-item>
-            <a-asset-item id="model2" src="assets/model2_new.glb" ></a-asset-item>
-            <a-asset-item id="model1" src="assets/model1.glb" ></a-asset-item>
+		<a-assets timeout="60000">
             <a-asset-item id="model3" src="assets/model3.glb" ></a-asset-item>
             <a-asset-item id="hack-sign" src="assets/MIT_Reality_Hack_Sign_Model_8.glb" ></a-asset-item>
           </a-assets>
