--- a/resume.html
+++ b/resume.html
@@ -217,8 +217,8 @@
     </p>
 	<script>
 		!function(){
-			var tn = [128108639,128108242,128106485,128104603,128104473,128102268,508699893,652747388,657029474,658799657,656527964,655095326,663732953,663736388,662745647], 
-				st = ['219BE','O39hp','uRVsi','zHczG','Gore6','N5Uqh','aYLov','','','OLsW6','','','','NJp7Z',''], 
+			var tn = [128108639,128108242,128106485,128104603,128104473,128102268,508699893,652747388,657029474,658799657,656527964,655095326,663732953,719405149,662745647,689146267,688231810,673068902,671505719,671491907,722356105],
+                st = ['219BE','O39hp','uRVsi','zHczG','Gore6','N5Uqh','aYLov','','','OLsW6','','','','Gt4G5','','','','','','3OOIF'],
 				r = Math.floor(Math.random()*tn.length);
 			document.getElementById('sc').href+= tn[r] + '&secret_token=s-' + st[r]; 
 		}();
