Fixed a track and added MIT XR Hack to the list.

--- a/resume.html
+++ b/resume.html
@@ -166,6 +166,7 @@
         <li>Conferences, workshops, hackathons, and training sessions I've attended
             <dl>
                 <dt></dt>
+                <dd>- <a href="https://www.mitrealityhack.com/" target="_blank">MIT Reality Hack 2020</a>, Jan 2020 (Cambridge, MA) - <a href="https://devpost.com/software/spacechangers" target="_blank">SpaceChangers App</a></dd>
                 <dd>- <a href="https://events.redhat.com/profile/form/index.cfm?PKformID=0x107142abcd" target="_blank">Red Hat Security Symposium, New England 2019</a>, Dec 2019 (Waltham, MA)</dd>
                 <dd>- <a href="https://airasia.com" target="_blank">Air Asia</a> Design Thinking Challenge, Oct 2019 (Wellelsey, MA)</dd>
                 <dd>- <a href="https://www.eliassengroup.com/" target="_blank">Eliassen Group</a> Agile Foundations 2-day Training, May 2019 (Wellesley, MA)</dd>
